Validation in md-input-container

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -7,7 +7,7 @@ body {
 
 /*Overwrite material design stuff until palette provider is available*/
 .mat-toolbar.mat-accent {
-  background: #465A65;
+/*  background: #465A65;*/
 }
 
 .mat-sidenav-container {
@@ -16,6 +16,6 @@ body {
 
 button.mat-button {
   margin: 0.5em;
-  background: #667A85;
+//  background: #667A85;
 }
 
