--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,9 +1,9 @@
-<md-sidenav-container fullscreen [class.m2app-dark]="isDarkTheme">
+<md-sidenav-container fullscreen>
   <h1 class="header">
     Pfila 2017
   </h1>
-  <md-toolbar color="accent">
-    <button md-button (click)="info()">
+  <md-toolbar md-raised-button color="accent">
+    <button md-button (click)="home()">
       <md-icon>home</md-icon>
       Home
     </button>
