--- a/client/src/app/info/info.component.html
+++ b/client/src/app/info/info.component.html
@@ -1,3 +1,37 @@
-<p>
-  info works!
-</p>
+<div class="main-container">
+  <h2>Einleitung</h2>
+  Das Pfingstlager wird von einem <a [routerLink]="['/team']">Team</a> aus der BESJ-Region 93 organisiert.
+  <h2>Datum</h2>
+  <ul>
+    <li>Das Pfila findet vom 03. - 05. Juni 2017 statt.</li>
+    <li>Die Ameisli sind am Sonntag (04. Juni 2017) mit dabei.</li>
+  </ul>
+  <h2>Altersgrenzen</h2>
+  <ul>
+    <li>Jungschärler: Kinder zwischen 8-14 Jahren</li>
+    <li>Ameisli: Kinder 5 Jahren</li>
+  </ul>
+  <h2>Kosten</h2>
+  <ul>
+    <li>Jungschärler: CHF 60.-</li>
+    <li>Ameisli: CHF 20.-</li>
+  </ul>
+  <h2>Anmeldeschluss</h2>
+  Der Anmeldeschluss ist der 13. Mai 2017.
+  <h2>Anmeldung</h2>
+  Du kannst dich <a [routerLink]="['/registration']">hier online</a> oder bei deinen Jungschi / Anmeisli Leitern anmelden.
+  <h2>Regionales Pfila</h2>
+  <h3>Jungscharen der BESJ Region 93  (<a href="http://www.besj.ch">BESJ</a>)</h3>
+  <ul>
+    <li>
+      <p>Für alle Jungschärler (Kinder zwischen 8 und 14 Jahren) dauert das Pfila vom 3. bis am 5. Juni 2017.</p>
+      <p>Anmeldung bis zum 13. Mai 2017 hier (<a [routerLink]="['/registration']">anmelden</a>) oder bei deinen
+        Jungschar-Leitern.
+    </li>
+    <li>
+      <p>Alle Ameisli (Kinder ab 5 Jahren) sind am Sonntag mit dabei.</p>
+      <p>Anmeldung bis zum 13. Mai 2017 hier (<a [routerLink]="['/registration']">anmelden</a>) oder bei deinen
+        Ameisli-Leitern.
+    </li>
+  </ul>
+</div>
