--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -3,5 +3,10 @@
 }
 
 .header {
-  margin: 0.5em;
+  background-color: cadetblue;
+  display: flex;
+  align-items: center;
+  h1 {
+    margin: 0.2em;
+  }
 }
