--- a/client/src/app/info/info.component.html
+++ b/client/src/app/info/info.component.html
@@ -1,6 +1,13 @@
 <div class="main-container">
   <h2>Einleitung</h2>
-  Das Pfingstlager wird von einem <a [routerLink]="['/team']">Team</a> aus der BESJ-Region 93 organisiert.
+  <p>Das Pfingstlager wird von einem <a [routerLink]="['/team']">Team</a> aus der (<a href="http://www.besj.ch">BESJ</a>)-Region
+    93 organisiert. Alle Jungschar- und Ameisli Gruppen aus dem oberen Baselbiet, welche dem BESJ angeschlossen sind,
+    gehören zu unserer
+    Region. Unsere <a href="http://www.besj.ch/ueber-uns/der-besj/grundwerte/">Grundwerte</a> sind auf der
+    Verbandswebseite zu
+    finden.</p>
+  <p> Eingeladen für das Pfila sind alle Kinder der oben erwähnten Gruppen.
+    Es ist auch möglich, dass sich Kinder anmelden, welche nicht zu diesen Gruppen gehören.</p>
   <h2>Datum</h2>
   <ul>
     <li>Das Pfila findet vom 03. - 05. Juni 2017 statt.</li>
@@ -17,21 +24,8 @@
     <li>Ameisli: CHF 20.-</li>
   </ul>
   <h2>Anmeldeschluss</h2>
-  Der Anmeldeschluss ist der 13. Mai 2017.
+  <p>Der Anmeldeschluss ist der 13. Mai 2017.</p>
   <h2>Anmeldung</h2>
-  Du kannst dich <a [routerLink]="['/registration']">hier online</a> oder bei deinen Jungschi / Anmeisli Leitern anmelden.
-  <h2>Regionales Pfila</h2>
-  <h3>Jungscharen der BESJ Region 93  (<a href="http://www.besj.ch">BESJ</a>)</h3>
-  <ul>
-    <li>
-      <p>Für alle Jungschärler (Kinder zwischen 8 und 14 Jahren) dauert das Pfila vom 3. bis am 5. Juni 2017.</p>
-      <p>Anmeldung bis zum 13. Mai 2017 hier (<a [routerLink]="['/registration']">anmelden</a>) oder bei deinen
-        Jungschar-Leitern.
-    </li>
-    <li>
-      <p>Alle Ameisli (Kinder ab 5 Jahren) sind am Sonntag mit dabei.</p>
-      <p>Anmeldung bis zum 13. Mai 2017 hier (<a [routerLink]="['/registration']">anmelden</a>) oder bei deinen
-        Ameisli-Leitern.
-    </li>
-  </ul>
+  <p>Du kannst dich <a [routerLink]="['/registration']">hier online</a> oder bei deinen Jungschi / Anmeisli Leitern
+    anmelden.</p>
 </div>
