--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -36,5 +36,7 @@
       </a>
     </md-nav-list>
   </md-sidenav>
-  <router-outlet></router-outlet>
+  <div class="main-container">
+    <router-outlet></router-outlet>
+  </div>
 </md-sidenav-container>
