--- a/client/src/app/info/info.component.html
+++ b/client/src/app/info/info.component.html
@@ -1,15 +1,15 @@
 <h2>Einleitung</h2>
 <p>Das Pfingstlager wird von einem <a [routerLink]="['/team']">Team</a> aus der (<a href="http://www.besj.ch">BESJ</a>)-Region
   93 organisiert. Alle Jungschar- und Ameisli Gruppen aus dem oberen Baselbiet, welche dem BESJ angeschlossen sind,
-  gehören zu unserer
-  Region. Unsere <a href="http://www.besj.ch/ueber-uns/der-besj/grundwerte/">Grundwerte</a> sind auf der
-  Verbandswebseite zu
-  finden.</p>
+  gehören zu unserer Region. Unsere <a href="http://www.besj.ch/ueber-uns/der-besj/grundwerte/">Grundwerte</a> sind auf
+  der  Verbandswebseite zu finden.</p>
 <p> Eingeladen für das Pfila sind alle Kinder der oben erwähnten Gruppen.
   Es ist auch möglich, dass sich Kinder anmelden, welche nicht zu diesen Gruppen gehören.</p>
+<h2>Ort</h2>
+<p>Der Pfila Lagerplatz liegt zwischen Buckten und Häfelfingen.</p>
 <h2>Datum</h2>
 <ul>
-  <li>Das Pfila findet vom 03. - 05. Juni 2017 statt.</li>
+  <li>Das Pfila findet vom 03. - 05. Juni 2017 statt. Wir übernachten die beiden Nächte im Zelt.</li>
   <li>Die Ameisli sind am Sonntag (04. Juni 2017) mit dabei.</li>
 </ul>
 <h2>Altersgrenzen</h2>
@@ -27,3 +27,5 @@
 <h2>Anmeldung</h2>
 <p>Du kannst dich <a [routerLink]="['/registration']">hier online</a> oder bei deinen Jungschi / Anmeisli Leitern
   anmelden.</p>
+<h2>Weitere Informationen</h2>
+<p>Detailierte Informationen zum Pfila werden dir nach dem Anmeldeschluss per E-Mail oder per Post versandt.</p>
