remove diet, change margin in form

--- a/client/src/app/registration/registration.component.html
+++ b/client/src/app/registration/registration.component.html
@@ -81,12 +81,7 @@
   </section>
   <section class="section">
     <md-input-container class="full-width">
-      <input mdInput placeholder="Allergien" fromControlName="allergies"/>
-    </md-input-container>
-  </section>
-  <section class="section">
-    <md-input-container class="full-width">
-      <textarea mdInput placeholder="Diät" fromControlName="diet"></textarea>
+      <input mdInput placeholder="Allergien / Diät" fromControlName="allergies"/>
     </md-input-container>
   </section>
   <section class="section">
