--- a/client/src/app/registration/registration.component.scss
+++ b/client/src/app/registration/registration.component.scss
@@ -17,6 +17,14 @@
   min-height: 3em;
 }
 
+.tiny-section {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  align-items: baseline;
+  padding: 0.5em;
+}
+
 .wrap {
   flex-wrap: wrap;
   flex-direction: column;
@@ -59,6 +67,9 @@
 }
 
 
+.comment {
+  resize: vertical;
+}
 /*.mat-input-container {
   background-color: #EEEEEE;
 }*/
