add team page, minor fixes

--- a/client/src/app/registration/registration.component.scss
+++ b/client/src/app/registration/registration.component.scss
@@ -1,7 +1,7 @@
 .form {
   max-width: 500px;
   padding-top: 1.5em;
-  background-color: #EEEEEE;
+  background-color: #F7F7F7;
   border-radius: 5px;
 }
 
