--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,7 +2,7 @@
 
   <header class="header">
     <button md-icon-button (click)="sidenav.open()">
-      <md-icon>more_vert</md-icon>
+      <md-icon>menu</md-icon>
     </button>
     <h1 class="header">
       Pfila 2017
@@ -22,7 +22,7 @@
       <a md-list-item [routerLink]="['/info']" (click)="sidenav.close()">
         <md-icon md-list-icon>info</md-icon>
         <span md-line>Info</span>
-        <span md-line class="secondary">Detail Info zum Pfila</span>
+        <span md-line class="secondary">Infomationen zum Pfila</span>
       </a>
       <a md-list-item [routerLink]="['/registration']" (click)="sidenav.close()">
         <md-icon md-list-icon>grade</md-icon>
