--- a/client/src/app/team/team.component.html
+++ b/client/src/app/team/team.component.html
@@ -1,1 +1,49 @@
-<h2></h2>
+<div class="card-container">
+  <md-card class="card">
+    <md-card-header>
+      <md-card-title>David Leuenberger</md-card-title>
+      <md-card-subtitle>Hauptleitung</md-card-subtitle>
+    </md-card-header>
+    <md-card-content>
+      <div>Adresse:</div>
+      <div class="indent">Oberlandstrasse 104</div>
+      <div class="indent">8610 User</div>
+      <div>Mobile:</div>
+      <div class="indent">078 861 36 54</div>
+      <div>E-Mail:</div>
+      <div class="indent">david.leuenberger@gmx.ch</div>
+    </md-card-content>
+  </md-card>
+  <md-card class="card">
+    <md-card-header>
+      <md-card-title>Sandra Grossmann</md-card-title>
+      <md-card-subtitle>Regionleitung, Anmeldungen</md-card-subtitle>
+    </md-card-header>
+    <md-card-content>
+      <div>Adresse:</div>
+      <div class="indent">Rohrbachweg 16</div>
+      <div class="indent">4460 Gelterkinden</div>
+      <div>Telefon:</div>
+      <div class="indent">061 981 16 04</div>
+      <div>Mobile:</div>
+      <div class="indent">076 667 55 27</div>
+      <div>E-Mail:</div>
+      <div class="indent">sandra.grossmann@gmx.ch</div>
+    </md-card-content>
+  </md-card>
+  <md-card class="card">
+    <md-card-header>
+      <md-card-title>David Senn</md-card-title>
+      <md-card-subtitle>Verpflegung</md-card-subtitle>
+    </md-card-header>
+    <md-card-content>
+      <div>Adresse:</div>
+      <div class="indent">Hauptstrasse 68</div>
+      <div class="indent">4457 Diegten</div>
+      <div>Mobile:</div>
+      <div class="indent">076 490 90 54</div>
+      <div>E-Mail:</div>
+      <div class="indent">davidsenn79@hotmail.com</div>
+    </md-card-content>
+  </md-card>
+</div>
