change layout, minor fixes

--- a/client/src/app/team/team.component.html
+++ b/client/src/app/team/team.component.html
@@ -5,6 +5,7 @@
       <md-card-subtitle>Hauptleitung</md-card-subtitle>
     </md-card-header>
     <md-card-content>
+      <br>
       <div>Adresse:</div>
       <div class="indent">Oberlandstrasse 104</div>
       <div class="indent">8610 User</div>
@@ -17,9 +18,10 @@
   <md-card class="card">
     <md-card-header>
       <md-card-title>Sandra Grossmann</md-card-title>
-      <md-card-subtitle>Regionleitung, Anmeldungen</md-card-subtitle>
+      <md-card-subtitle>Regionalleitung, Anmeldungen</md-card-subtitle>
     </md-card-header>
     <md-card-content>
+      <br>
       <div>Adresse:</div>
       <div class="indent">Rohrbachweg 16</div>
       <div class="indent">4460 Gelterkinden</div>
@@ -37,6 +39,7 @@
       <md-card-subtitle>Verpflegung</md-card-subtitle>
     </md-card-header>
     <md-card-content>
+      <br>
       <div>Adresse:</div>
       <div class="indent">Hauptstrasse 68</div>
       <div class="indent">4457 Diegten</div>
