add server part

--- a/client/src/app/registration/registration.component.html
+++ b/client/src/app/registration/registration.component.html
@@ -80,12 +80,12 @@
   </section>
   <section class="section">
     <md-input-container class="full-width">
-      <input mdInput placeholder="Allergien / Diät" fromControlName="allergies"/>
+      <input mdInput placeholder="Allergien / Diät" formControlName="allergies"/>
     </md-input-container>
   </section>
   <section class="section">
     <md-input-container class="full-width">
-      <textarea mdInput placeholder="Bemerkungen" class="comment" fromControlName="comment"></textarea>
+      <textarea mdInput placeholder="Bemerkungen" class="comments" formControlName="comments"></textarea>
     </md-input-container>
   </section>
 
