--- a/client/src/app/registration/registration.component.scss
+++ b/client/src/app/registration/registration.component.scss
@@ -1,6 +1,5 @@
 .form {
   max-width: 500px;
-  padding-top: 1.5em;
   background-color: #F7F7F7;
   border-radius: 5px;
 }
@@ -23,7 +22,7 @@
   flex-wrap: wrap;
   align-content: center;
   align-items: baseline;
-  padding: 0.5em;
+  padding: 0.5em 0 0.5em 0em;
 }
 
 .wrap {
@@ -46,18 +45,23 @@
   width: 15em;
 }
 
+.topborder {
+  margin-top: 1em;
+}
+
 .select-container {
   display: flex;
   flex-direction: column;
-  margin-left: 0.5em;
-  margin-right: 0.5em;
+  margin: 0.5em;
+//  margin-left: 0.5em;
+//  margin-right: 0.5em;
 }
 
 .date-element {
-  margin-top: 0;
+  margin-top: 0.5em;
   margin-left: 0.5em;
   margin-right: 0.5em;
-  margin-bottom: 0;
+  margin-bottom: 0.5em;
 }
 
 .h2-element {
