change spinner, angular2-busy not working as expected with angular-cli

--- a/client/src/app/registration/registration.component.html
+++ b/client/src/app/registration/registration.component.html
@@ -113,4 +113,4 @@
     </button>
   </div>
 </form>
-<div [ngBusy]="{busy: busy, message: 'Anmeldung wird verarbeiet...', delay: 200, minDuration: 600}"></div>
+<app-my-spinner [isRunning]="busy" [delay]="150"></app-my-spinner>
