--- a/client/src/app/+admin/login/login.component.scss
+++ b/client/src/app/+admin/login/login.component.scss
@@ -1,3 +1,42 @@
+.form {
+  max-width: 500px;
+  background-color: #F7F7F7;
+  border-radius: 5px;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.section {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  align-items: baseline;
+}
+
+.wrap {
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.grayButton {
+  background: #A6BAC5;
+}
+
+.fill-remaining-space {
+  flex: 1 1 auto;
+}
+
+.button-row {
+  display: flex;
+}
+
+
+
+
+/*
+
 main {
 }
 
@@ -41,4 +80,4 @@ main {
 
 .loginPageTitleDiv {
   font-size: 300%;
-}
+}*/
