--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -13,7 +13,6 @@
     <md-toolbar color="primary">Menu
     </md-toolbar>
     <md-nav-list>
-
       <a md-list-item [routerLink]="['/home']" (click)="sidenav.close()">
         <md-icon md-list-icon>home</md-icon>
         <span md-line>Home</span>
@@ -33,6 +32,12 @@
         <md-icon md-list-icon>people</md-icon>
         <span md-line>Team</span>
         <span md-line class="secondary">Verantwortliches Team</span>
+      </a>
+      <div class="menu__separator"></div>
+      <a md-list-item [routerLink]="['/admin']" (click)="sidenav.close()">
+        <md-icon md-list-icon>arrow_forward</md-icon>
+        <span md-line>Administration</span>
+        <span md-line class="secondary">Administrationsbereich für Leiter</span>
       </a>
     </md-nav-list>
   </md-sidenav>
