--- a/client/src/app/confirmation/confirmation.component.html
+++ b/client/src/app/confirmation/confirmation.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="person">
+<div class="confirmation-container" *ngIf="person">
   <h2>Danke für die Anmeldung</h2>
   <p>
     Die Anmeldung von {{person.firstname}} {{person.lastname}} wurde erfolgreich gespeichert.
