--- a/client/src/app/+admin/dashboard/dashboard.component.scss
+++ b/client/src/app/+admin/dashboard/dashboard.component.scss
@@ -1,3 +1,16 @@
 .example-spacer {
   flex: 1 1 auto;
 }
+
+.admin-container {
+  diplay: flex;
+  flex-wrap: wrap;
+  background-color: #7fbec0;
+}
+
+.button {
+  padding: 0 1em 0 1em;
+  margin: 0;
+  min-width: 0;
+}
+
