--- a/client/src/app/+admin/login/login.component.html
+++ b/client/src/app/+admin/login/login.component.html
@@ -1,21 +1,23 @@
-<h2>Administrationsbereich</h2>
-<h3>Anmeldung</h3>
-<form class="form" [formGroup]="form" novalidate>
-  <section class="section">
-    <md-input-container class="full-width">
-      <input mdInput placeholder="E-Mail" formControlName="email">
-      <md-hint *ngIf="!form.controls.email.valid" [ngStyle]="{'color': 'red'}" align="start">erforderlich
-      </md-hint>
-    </md-input-container>
-    <md-input-container class="full-width">
-      <input mdInput placeholder="Passwort" formControlName="password" type="password">
-      <md-hint *ngIf="!form.controls.password.valid" [ngStyle]="{'color': 'red'}" align="start">erforderlich</md-hint>
-    </md-input-container>
-  </section>
-  <div class="button-row">
-    <span class="fill-remaining-space"></span>
-    <button md-button (click)="doLogin(form.value, form.valid)" [disabled]="!form.valid" class="grayButton">Login</button>
-  </div>
-</form>
-<app-my-spinner [isRunning]="busy" [delay]="150"></app-my-spinner>
-
+<div class="admin-container">
+  <h2>Administrationsbereich</h2>
+  <h3>Anmeldung</h3>
+  <form class="form" [formGroup]="form" novalidate>
+    <section class="section">
+      <md-input-container class="full-width">
+        <input mdInput placeholder="E-Mail" formControlName="email">
+        <md-hint *ngIf="!form.controls.email.valid" [ngStyle]="{'color': 'red'}" align="start">erforderlich
+        </md-hint>
+      </md-input-container>
+      <md-input-container class="full-width">
+        <input mdInput placeholder="Passwort" formControlName="password" type="password">
+        <md-hint *ngIf="!form.controls.password.valid" [ngStyle]="{'color': 'red'}" align="start">erforderlich</md-hint>
+      </md-input-container>
+    </section>
+    <div class="button-row">
+      <span class="fill-remaining-space"></span>
+      <button md-button (click)="doLogin(form.value, form.valid)" [disabled]="!form.valid" class="grayButton">Login
+      </button>
+    </div>
+  </form>
+  <app-my-spinner [isRunning]="busy" [delay]="150"></app-my-spinner>
+</div>
