--- a/client/src/app/+admin/logout/logout.component.html
+++ b/client/src/app/+admin/logout/logout.component.html
@@ -1,4 +1,6 @@
-<h2>Administrationsbereich</h2>
-<h3>Auf Wiedersehen ...</h3>
-<p>Du hast dich abgemeldet.</p>
-<p>Zurück zum <a [routerLink]="['/admin/login']">Login</a></p>
+<div class="logout-container">
+  <h2>Administrationsbereich</h2>
+  <h3>Auf Wiedersehen ...</h3>
+  <p>Du hast dich abgemeldet.</p>
+  <p>Zurück zum <a [routerLink]="['/admin/login']">Login</a></p>
+</div>
