--- a/client/src/app/registration/registration.component.scss
+++ b/client/src/app/registration/registration.component.scss
@@ -53,22 +53,14 @@
   display: flex;
   flex-direction: column;
   margin: 0.5em;
-//  margin-left: 0.5em;
-//  margin-right: 0.5em;
 }
 
 .date-element {
-  margin-top: 0.5em;
-  margin-left: 0.5em;
-  margin-right: 0.5em;
-  margin-bottom: 0.5em;
+  margin: 0.5em;
 }
 
 .h2-element {
-  margin-top: 0.5em;
-  margin-left: 0.5em;
-  margin-right: 0.5em;
-  margin-bottom: 0.5em;
+  margin: 0.5em;
 }
 
 .comment {
